--- a/doc/dissertation/appendices.tex
+++ b/doc/dissertation/appendices.tex
@@ -5,8 +5,9 @@
 %------------------------------------------------------------------------------
 %\phantomsection
 %------------------------------------------------------------------------------
-\chapter{DERIVATION OF AN ANALYTIC LOCAL DISCRETE MAXIMUM PRINCIPLE FOR LINEAR
-  TRANSPORT\label{sec:analytic_dmp}}
+\chapter{DERIVATION OF LOCAL SOLUTION BOUNDS FOR LINEAR TRANSPORT USING
+  THE METHOD OF CHARACTERISTICS
+  \label{sec:analytic_dmp}}
   \input{content/appendices/analytic_dmp}
 %------------------------------------------------------------------------------
 \chapter{DERIVATION OF THE ENTROPY FLUX FOR THE SHALLOW WATER EQUATIONS
