--- a/doc/dissertation/chapter2.tex
+++ b/doc/dissertation/chapter2.tex
@@ -37,7 +37,7 @@
 %===============================================================================
 \subsection{Low-Order Viscosity\label{sec:low_order_viscosity_scalar}}
   \input{content/low_order/low_order_viscosity_scalar}
-\subsection{The Low-Order System\label{sec:low_order_scheme_scalar}}
+\subsection{Low-Order System\label{sec:low_order_scheme_scalar}}
   \input{content/low_order/low_order_scheme_scalar}
 \subsection{M-Matrix Property\label{sec:m_matrix}}
   \input{content/low_order/m_matrix}
@@ -50,7 +50,7 @@
 %===============================================================================
 \subsection{Invariant Domains\label{sec:invariant_domains}}
   \input{content/low_order/invariant_domain}
-\subsection{The Low-Order Scheme\label{sec:low_order_scheme_system}}
+\subsection{Low-Order System\label{sec:low_order_scheme_system}}
   \input{content/low_order/low_order_scheme_system}
 %===============================================================================
 \section{High-Order Scheme for Scalar Conservation Laws
@@ -58,7 +58,7 @@
 %===============================================================================
 \subsection{Entropy Viscosity\label{sec:entropy_viscosity_scalar}}
     \input{content/high_order/entropy_viscosity_scalar}
-\subsection{The High-Order Scheme\label{sec:high_order_scheme_scalar}}
+\subsection{High-Order System\label{sec:high_order_scheme_scalar}}
   \input{content/high_order/high_order_scheme_scalar}
 %===============================================================================
 \section{High-Order Scheme for Conservation Law Systems
@@ -66,20 +66,22 @@
 %===============================================================================
 \subsection{Entropy Viscosity\label{sec:entropy_viscosity_system}}
     \input{content/high_order/entropy_viscosity_system}
-\subsection{The High-Order Scheme\label{sec:high_order_scheme_system}}
+\subsection{High-Order System\label{sec:high_order_scheme_system}}
   \input{content/high_order/high_order_scheme_system}
 %===============================================================================
 \section{FCT Scheme for Scalar Conservation Laws\label{sec:fct_scalar}}
 %===============================================================================
-\subsection{The FCT Scheme\label{sec:fct_scheme_scalar}}
+\subsection{FCT System\label{sec:fct_scheme_scalar}}
   \input{content/fct/fct_scheme_scalar}
 \subsection{FCT Solution Bounds\label{sec:fct_bounds}}
   \input{content/fct/fct_bounds}
-\subsection{Limiting Coefficients\label{sec:limiting_coefficients_scalar}}
-  \input{content/fct/limiting_coefficients}
+\subsection{Antidiffusion Bounds\label{sec:antidiffusion_bounds}}
   \input{content/fct/limited_flux_bounds_steady_state}
   \input{content/fct/limited_flux_bounds_explicit_euler}
   \input{content/fct/limited_flux_bounds_theta}
+  \input{content/fct/antidiffusion_bounds_signs}
+\subsection{Limiting Coefficients\label{sec:limiting_coefficients_scalar}}
+  \input{content/fct/limiting_coefficients}
 %===============================================================================
 \section{FCT Scheme for Systems of Conservation Laws\label{sec:fct_systems}}
 %===============================================================================
