--- a/doc/dissertation/content/fct/fct_systems_scheme.tex
+++ b/doc/dissertation/content/fct/fct_systems_scheme.tex
@@ -84,9 +84,9 @@ where accents denote transformed quantities:
 One can then choose the limiting coefficients $\limitermatrix\ij$ to satisfy
 bounds on the transformed variables: 
 \begin{equation}
-  \hat{\DMPbound}_i^- \leq
+  \hat{\solutionbound}_i^- \leq
   \hat{\solutionvector}_i^{n+1} \leq
-  \hat{\DMPbound}_i^+ \quad \forall i \eqp
+  \hat{\solutionbound}_i^+ \quad \forall i \eqp
 \end{equation}
 Imposition of these bounds corresponds to bounding the transformed antidiffusion
 flux sums:
