--- a/doc/dissertation/content/fct/limiting_coefficients.tex
+++ b/doc/dissertation/content/fct/limiting_coefficients.tex
@@ -1,7 +1,7 @@
 \begin{theorem}{Discrete Maximum Principle-Satisfying Limiting Coefficients}
    Suppose that that a discrete maximum principle
-   $\DMPbound_i^+\le \solutionletter_i^{n+1}\le \DMPbound_i^-$
-   corresponds to the following inequality for the limited correction fluxes:
+   $\solutionbound_i^+\le \solutionletter_i^{n+1}\le \solutionbound_i^-$
+   corresponds to the following inequality for the antidiffusion fluxes:
    \begin{equation}
       \limitedfluxbound_i^- \le \limitedfluxsumi \le \limitedfluxbound_i^+ \eqc
    \end{equation}
