--- a/doc/dissertation/content/introduction/purpose.tex
+++ b/doc/dissertation/content/introduction/purpose.tex
@@ -62,7 +62,7 @@ physically-motivated criteria, such as discrete local-extremum-diminishing
 (LED) bounds.
 
 For the monotone, low-order method required by the FCT algorithm, this research
-uses the discrete-maximum-preserving method introduced by Guermond
+uses the discrete maximum principle (DMP) preserving method introduced by Guermond
 \cite{guermond_firstorder} for the scalar transport model, and the invariant
 domain method for the case of conservation law systems,
 also introduced by Guermond \cite{guermond_invariantdomain}.
