--- a/doc/dissertation/content/preliminaries/shallowwater.tex
+++ b/doc/dissertation/content/preliminaries/shallowwater.tex
@@ -75,9 +75,8 @@ Initial conditions are included if the problem is transient:
 \end{equation}
 To complete the problem formulation, boundary
 conditions must be provided, some examples being
-Dirichlet boundary conditions, open boundary conditions,
-wall boundary conditions,
-etc. One must be careful with specifying boundary conditions to have
+Dirichlet boundary, open boundary, wall boundary, etc.
+One must be careful with specifying boundary conditions to have
 a well-posed problem for hyperbolic systems.
 In general a characteristic analysis is required; there is a large body of research
 addressing this area alone. For simplicity, problems in this work are
