--- a/doc/dissertation/dissertation.tex
+++ b/doc/dissertation/dissertation.tex
@@ -34,7 +34,8 @@
 \input{\contentdir/theorems_dissertation}
 
 % create black bar where there are "Overfull"s
-\overfullrule=1cm
+\overfullrule=15cm
+\setlength{\emergencystretch}{0.5em}
 
 %===============================================================================
 % Document
