--- a/doc/dissertation/nomenclature.tex
+++ b/doc/dissertation/nomenclature.tex
@@ -191,7 +191,8 @@ $\speed$           & speed\\
 $\velocity$        & velocity\\
 $\volume$          & volume\\
 $\cellvolume$      & volume of cell $\cellindex$\\
-$\DMPboundsi$      & upper and lower DMP bounds for degree of freedom $i$\\
+$\solutionbound_i^\pm$ & upper and lower solution bounds for degree of freedom $i$\\
+$\DMPbounds_i$     & upper and lower DMP bounds for degree of freedom $i$\\
 $\x$               & spatial position\\
 %==============================================================================
 % Greek alphabet
