--- a/doc/dissertation/content/fct/limited_flux_bounds_steady_state.tex
+++ b/doc/dissertation/content/fct/limited_flux_bounds_steady_state.tex
@@ -1,16 +1,19 @@
-\begin{theorem}{Limited Flux Bounds for Steady-State Scheme}
+\begin{theorem}{Antidiffusion Bounds for Steady-State Scheme}
    Using the steady-state FCT scheme given by Equation
    \eqref{eq:fct_steady_state},
-   the following limited flux bounds $\limitedfluxbound_i^\pm$ correspond to the
-   discrete maximum principle
-   $\DMPbound_i^-\le \solutionletter_i\le \DMPbound_i^+$:
-   \begin{equation}
-   \begin{split}
-     \limitedfluxbound_i^\pm & \equiv \ssmatrixletter_{i,i}^L \DMPbound_i^\pm
-       + \sumjnoti\ssmatrixletter\ij^L\solutionletter_j - \ssrhsletter_i\\
-     & = \sumjnoti\ssmatrixletter\ij^L(\solutionletter_j
-       - \solutionletter_{\substack{\max\\\min},i}) \eqp
-   \end{split}
+   the following antidiffusion bounds $\limitedfluxbound_i^\pm$ correspond to the
+   solution bounds
+   $\solutionbound_i^-\le \solutionletter_i\le \solutionbound_i^+$:
+   \begin{equation}\label{eq:antidiffusion_bounds_steady_state}
+     \limitedfluxbound_i^\pm \equiv \ssmatrixletter_{i,i}^L \solutionbound_i^\pm
+       + \sumjnoti\ssmatrixletter\ij^L\solutionletter_j - \ssrhsletter_i \eqp
+   %\begin{split}
+   %  \limitedfluxbound_i^\pm & \equiv \ssmatrixletter_{i,i}^L \solutionbound_i^\pm
+   %    + \sumjnoti\ssmatrixletter\ij^L\solutionletter_j - \ssrhsletter_i\\
+   %  & = -\sumjnoti\ssmatrixletter\ij^L(
+   %    \solutionletter_{\substack{\max\\\min},i}
+   %    -\solutionletter_j) \eqp
+   %\end{split}
    \end{equation}
 \end{theorem}
 
@@ -25,17 +28,17 @@
       \limitedfluxsumi = \sumj\ssmatrixletter\ij^L\solutionletter_j
       - \ssrhsletter_i \eqp
    \]
-   The discrete maximum principle is
+   The solution bounds for $i$ are
    \[
-      \DMPbound_i^-\le \solutionletter_i\le \DMPbound_i^+ \eqp
+      \solutionbound_i^-\le \solutionletter_i\le \solutionbound_i^+ \eqp
    \]
    Through addition/subtraction and multiplication/division operations, this
    principle can be made to look like the following:
    \[
-   \ssmatrixletter_{i,i}^L \DMPbound_i^-
+   \ssmatrixletter_{i,i}^L \solutionbound_i^-
      + \sumjnoti\ssmatrixletter\ij^L\solutionletter_j - \ssrhsletter_i
    \le \sumj \ssmatrixletter\ij^L \solutionletter_j - \ssrhsletter_i
-   \le \ssmatrixletter_{i,i}^L \DMPbound_i^+
+   \le \ssmatrixletter_{i,i}^L \solutionbound_i^+
      + \sumjnoti\ssmatrixletter\ij^L \solutionletter_j - \ssrhsletter_i \eqc
    \]
    which by substituting equations above gives
