--- a/doc/dissertation/content/fct/limited_flux_bounds_theta.tex
+++ b/doc/dissertation/content/fct/limited_flux_bounds_theta.tex
@@ -1,18 +1,10 @@
-\begin{theorem}{Limited Flux Bounds for Theta Scheme}
-  Using the Theta FCT scheme
-  \begin{equation}
-    \lumpedmassmatrix\frac{\solutionvector^{\timeindex+1}
-      - \solutionvector^\timeindex}{\timestepsize}
-    + (1-\theta)\loworderssmatrix\solutionvector^\timeindex
-    + \theta\loworderssmatrix\solutionvector^{\timeindex+1}
-    = (1-\theta)\ssrhs^\timeindex + \theta\ssrhs^{\timeindex+1}
-    + \limitedfluxsum \eqc
-  \end{equation}
-  the following limited flux bounds $\limitedfluxbound_i^\pm$ correspond to the
-  discrete maximum principle
-  $\DMPbound_i^-\le \solutionletter_i^{\timeindex+1}\le \DMPbound_i^+$:
-  \begin{equation}
-    \limitedfluxbound_i^\pm \equiv \lumpedmassentry\frac{\DMPbound_i^\pm
+\begin{theorem}{Antidiffusion Bounds for Theta Scheme}
+  Using the Theta FCT scheme given by Equation \eqref{eq:fct_theta},
+  the following antidiffusion bounds $\limitedfluxbound_i^\pm$ correspond to the
+  solution bounds
+  $\solutionbound_i^-\le \solutionletter_i^{\timeindex+1}\le \solutionbound_i^+$:
+  \begin{equation}\label{eq:antidiffusion_bounds_theta}
+    \limitedfluxbound_i^\pm \equiv \lumpedmassentry\frac{\solutionbound_i^\pm
       - \solutionletter_i^\timeindex}{\timestepsize}
     +(1-\theta)\sumj \ssmatrixletter\ij^L \solutionletter_j^\timeindex
     +\theta\sumj \ssmatrixletter\ij^L \solutionletter_j^{\timeindex+1}
@@ -42,14 +34,14 @@
       - (1-\theta)\ssrhsletter_i^\timeindex
       - \theta \ssrhsletter_i^{\timeindex+1} \eqp
    \]
-   The discrete maximum principle is
+   The solution bounds for degree of freedom $i$ are
    \[
-      \DMPbound_i^-\le \solutionletter_i^{\timeindex+1}\le \DMPbound_i^+ \eqp
+      \solutionbound_i^-\le \solutionletter_i^{\timeindex+1}\le \solutionbound_i^+ \eqp
    \]
    Through addition/subtraction and multiplication/division operations, this
    principle can be made to look like the following:
    \begin{multline*}
-   \lumpedmassentry\frac{\DMPbound_i^-
+   \lumpedmassentry\frac{\solutionbound_i^-
      -\solutionletter_i^\timeindex}{\timestepsize}
       + (1-\theta)\sumj \ssmatrixletter\ij^L \solutionletter_j^\timeindex
       + \theta\sumj \ssmatrixletter\ij^L \solutionletter_j^{\timeindex+1}
@@ -61,7 +53,7 @@
       + \theta\sumj \ssmatrixletter\ij^L \solutionletter_j^{\timeindex+1}
       - (1-\theta)\ssrhsletter_i^\timeindex
       - \theta \ssrhsletter_i^{\timeindex+1}\\
-   \le \lumpedmassentry\frac{\DMPbound_i^+
+   \le \lumpedmassentry\frac{\solutionbound_i^+
      -\solutionletter_i^\timeindex}{\timestepsize}
       + (1-\theta)\sumj \ssmatrixletter\ij^L \solutionletter_j^\timeindex
       + \theta\sumj \ssmatrixletter\ij^L \solutionletter_j^{\timeindex+1}
