--- a/doc/dissertation/dedication.tex
+++ b/doc/dissertation/dedication.tex
@@ -5,6 +5,8 @@
 % Needs to be set to part, so the TOC doesnt add 'CHAPTER ' prefix in the TOC.
 \addcontentsline{toc}{chapter}{DEDICATION}  
 
-\indent To Siobh\'{a}n
+%\indent
+\vspace{3.5in}
+\begin{center}To Siobh\'{a}n\end{center}
 
 \pagebreak{}
